# meerkat

./: .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
src/server/: mod.rs
src/store/: block_index.rs  block_sink.rs  indexing_buffer.rs  mod.rs  segment_metadata.proto  segment_metadata.rs  segment_writer.rs
src/store/block_encoders/: binary_plain.rs  bitmap_rle.rs  mod.rs  offsets.rs  primitive_plain.rs  snappy.rs  varint.rs
src/store/encoding/: bitmap_rle.rs  mod.rs  offsets.rs  util.rs  varint.rs
src/store/encoding/raw/: binary_enc.rs  mod.rs  primitive_enc.rs
src/store/encoding/snappy/: mod.rs  snappy_enc.rs
src/store/index/: mod.rs
src/store/io/: default_block_writer.rs  mod.rs  unix_disk_block_reader.rs
