[package]
name = "meerkat"
version = "0.1.0"
authors = ["Gabriel <gabriel.velo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.21" }
clap = { version = "2.33.3" }

tracing = { version = "0.1.25" }
tracing-core = { version = "0.1.17"}
tracing-log = { version = "0.1.2"}
tracing-subscriber = { version = "0.2.17"}


[build-dependencies]
built = { version = "0.5.1", features = ["chrono", "git2"] }
