[package]
name = "meerkat"
version = "0.1.0"
authors = ["Gabriel <gabriel.velo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.21" }
clap = { version = "2.33.3" }

tracing = { version = "0.1.25" }
tracing-core = { version = "0.1.17" }
tracing-log = { version = "0.1.2" }
tracing-subscriber = { version = "0.2.17" }
tokio = { version = "1.12.0", features = ["full"] }
pin-project-lite = { version = "0.2.7" }
futures = { version = "0.3.17" }
async-trait = { version = "0.1.51" }
anyhow = { version = "1.0.45" }
rand = "0.8.0"

[dev-dependencies]
tempfile = { version = "3" }

[build-dependencies]
built = { version = "0.5.1", features = ["chrono", "git2"] }
